--- a/watchface/resources/styles.css
+++ b/watchface/resources/styles.css
@@ -36,9 +36,9 @@
 }
 
 #myLabel {
-  font-size: 68;
+  font-size: 80;
   font-weight: bold;
-  font-family: Colfax-Medium;
+  font-family: Colfax-Light;
   text-length: 80;
   text-anchor: middle;
   x: 32%;
@@ -67,7 +67,7 @@
 }
 
 #myCurrentBG {
-  font-size: 70;
+  font-size: 65;
   font-family: Seville-Bold-Condensed;
   text-length: 20;
   text-anchor: middle;
