--- a/watchface/resources/styles.css
+++ b/watchface/resources/styles.css
@@ -133,7 +133,7 @@
   font-family: System-Regular;
   text-length: 80;
   text-anchor: middle;
-  x: 130;
+  x: 30%;
   y: 87%;
   fill: #f8fcf8;
 }
