--- a/resources/styles.css
+++ b/resources/styles.css
@@ -173,6 +173,16 @@
   font-size: 28;
   font-family: System-Regular;
   text-length: 80;
+  text-anchor: start;
+  x: 67%+45;
+  y: 249;
+  fill: #f8fcf8;
+}
+
+#myPod {
+  font-size: 28;
+  font-family: System-Regular;
+  text-length: 80;
   text-anchor: middle;
   x: 72%+22;
   y: 87%;
