--- a/resources/styles.css
+++ b/resources/styles.css
@@ -56,6 +56,16 @@
   fill: #707070;
 }
 
+#myWeather {
+  font-size: 25;
+  font-family: Colfax-Regular;
+  text-length: 8;
+  text-anchor: start;
+  x: 9;
+  y:12%;
+  fill: yellow;
+}
+
 #myDelta {
   font-size: 30;
   font-family: Colfax-Regular;
