--- a/resources/styles.css
+++ b/resources/styles.css
@@ -36,8 +36,8 @@
 }
 
 #myClock {
-  font-size: 68;
-  font-family: System-Light;
+  font-size: 72;
+  font-family: System-Regular;
   text-length: 80;
   text-anchor: end;
   x: 51%;
@@ -67,7 +67,7 @@
 
 #myWeather {
   font-size: 25;
-  font-family: Colfax-Regular;
+  font-family: System-Regular;
   text-length: 8;
   text-anchor: end;
   x: 25%;
@@ -77,7 +77,7 @@
 
 #myDelta {
   font-size: 30;
-  font-family: Colfax-Regular;
+  font-family: System-Regular;
   text-length: 8;
   text-anchor: middle;
   x: 80%;
@@ -87,7 +87,7 @@
 
 #myCurrentBG {
   font-size: 65;
-  font-family: Seville-Bold-Condensed;
+  font-family: System-Regular;
   text-length: 20;
   text-anchor: middle;
   x: 80%;
@@ -97,7 +97,7 @@
 
 #myBGUnits {
   font-size: 24;
-  font-family: Seville-Regular;
+  font-family: System-Regular;
   text-length: 20;
   text-anchor: start;
   x: 80%;
@@ -107,7 +107,7 @@
 
 #myBGUpdateTime {
   font-size: 25;
-  font-family: Colfax-Regular;
+  font-family: System-Regular;
   text-length: 20;
   text-anchor: start;
   x: 55%;
