Battery and date colours

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -36,12 +36,12 @@
 }
 
 #myClock {
-  font-size: 76;
+  font-size: 78;
   font-family: System-Regular;
   text-length: 80;
   text-anchor: end;
   x: 51%;
-  y: 34%+2;
+  y: 34%+4;
   fill: #f8fcf8;
 }
 
@@ -51,7 +51,7 @@
   text-length: 4;
   text-anchor: start;
   x: 52%;
-  y: 34%+2;
+  y: 34%+4;
   fill: #f8fcf8;
 }
 
@@ -62,7 +62,7 @@
   text-anchor: middle;
   x: 34%+2;
   y: 50%;
-  fill: #ffffff;
+  fill: white;
 }
 
 #myWeather {
@@ -212,13 +212,12 @@
 }
 
 #batteryPercent {
-  font-size: 22;
+  font-size: 20;
   font-family: System-Light;
   text-length: 4;
   text-anchor: end;
   x:47%;
   y:11%;
-  fill: #ffffff;
 }
 
 .batteryBorder {
